# TCODER-CLI

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
tcoder/: __init__.py  main.py
tcoder/agents/: __init__.py  base.py  chat_agent.py
tcoder/config/: __init__.py  manager.py  models.py
tcoder/core/: exceptions.py  models.py
tcoder/memory/: __init__.py  memory_manager.py
tcoder/providers/: __init__.py  base.py  openai_compatible.py
tcoder/security/: __init__.py  key_manager.py
tcoder/tools/: __init__.py  base.py  filesystem.py
tcoder/ui/: __init__.py  app.py
tests/: __init__.py  test_models.py
