[project]
name = "tcoder"
version = "0.1.0"
description = "Production-Grade AI Coding Agent for Linux"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "TCODER Team", email = "tcoder@example.com"}
]
keywords = ["ai", "coding", "agent", "cli", "linux"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "typer>=0.15.0",
    "rich>=13.9.0",
    "textual>=0.75.0",
    "prompt-toolkit>=3.0.48",
    "httpx>=0.27.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy>=2.0.36",
    "keyring>=25.5.0",
    "loguru>=0.7.3",
    "toml>=0.10.2",
    "pygit2>=1.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.5.0",
    "ruff>=0.9.0",
    "black>=24.10.0",
    "mypy>=1.13.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
]

[project.scripts]
tcoder = "tcoder.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
python-version = "3.13"

[tool.ruff]
line-length = 120
target-version = "py313"
select = ["E", "F", "W", "I", "N", "UP"]
ignore = []

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
